ingresses/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`grafana.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
      scheme: http
  tls:
    secretName: rancher-tls-cert
