ingresses/neuvector-ingress-local-cluster.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nv-ingressroute
  namespace: cattle-neuvector-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nv-local.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: neuvector-service-webui
      port: 8443
      scheme: https
  tls:
    secretName: nv-tls-ingress
